objects/Expense__c.object
<CustomObject>
    <description>This object hold the expense details.</description>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <description>Check Status of expense</description>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reject</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Available_Balance__c</fullName>
        <description>This field will calculate the  Balance Available..Calculated By differnce of Total Balance and Total Expense</description>
        <formula>Total_Balance__c - Total_Expense__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Formula_To_Cal__c</fullName>
        <formula>Total_Balance__c * 2</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula To Cal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>From this we have to choose the Member Whose Expense We are holding</description>
        <label>Member</label>
        <referenceTo>Member__c</referenceTo>
        <relationshipLabel>Expenses</relationshipLabel>
        <relationshipName>Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Roll_Up_ExpenseItem__c</fullName>
        <label>Roll Up ExpenseItem</label>
        <summarizedField>Expense_Item__c.Cal_Expense_Item__c</summarizedField>
        <summaryForeignKey>Expense_Item__c.Expense__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Short_Name__c</fullName>
        <description>In thiss we have to write Jan For January and for other months too and Year of Year</description>
        <inlineHelpText>For yearly expense this field will hold the year and for monthly expense it will hold the Month Name</inlineHelpText>
        <label>Short Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Balance__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total Balance For one Member</description>
        <inlineHelpText>This field will holds the total balance for member</inlineHelpText>
        <label>Total Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Expense__c</fullName>
        <description>When we are selecting Type as Yearly it will Calculate the Expense from Child Line Item.
When we are selecting Type as Monthly it will Calculate the Expense from Child Expense Item.</description>
        <inlineHelpText>This field will auto populate according to child expenses or expenses line items.</inlineHelpText>
        <label>Total Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>It is Picklist where we have to select the yearly or Monthly</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Yearly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Yearly_Expense__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>When Type is yearly then it is going to use</description>
        <inlineHelpText>Will come in picture
when Type is Monthly</inlineHelpText>
        <label>Yearly Expense</label>
        <referenceTo>Expense__c</referenceTo>
        <relationshipLabel>Expenses</relationshipLabel>
        <relationshipName>Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Expense</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Total_Expense__c</columns>
        <columns>Total_Balance__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Expense Name</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01I2v000001fX0GEAU_00N2v00000HZV3MEAX</fullName>
        <active>true</active>
        <field>Expense__c.Yearly_Expense__c</field>
        <filterItems>
            <field>Expense__c.Type__c</field>
            <operation>equals</operation>
            <value>Yearly</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Expense_Yearly Expense</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I2v000001fX5qEAE_00N2v00000HZV9ZEAX</fullName>
        <active>true</active>
        <field>Expense_Item__c.Expense__c</field>
        <filterItems>
            <field>Expense__c.Type__c</field>
            <operation>equals</operation>
            <value>Monthly</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Expense Item_Expense</name>
    </namedFilters>
    <pluralLabel>Expenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>VR_TotalExpense</fullName>
        <active>true</active>
        <errorConditionFormula>Total_Expense__c &gt;Total_Balance__c</errorConditionFormula>
        <errorDisplayField>Total_Expense__c</errorDisplayField>
        <errorMessage>Total expense can’t grater then Total Balance</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_YearlyExpense</fullName>
        <active>true</active>
        <errorConditionFormula>AND((ISPICKVAL( Type__c ,&quot;yearly&quot;) ), Yearly_Expense__c !=NULL)</errorConditionFormula>
        <errorDisplayField>Yearly_Expense__c</errorDisplayField>
        <errorMessage>Yearly Expense should not populated when Type is Yearly</errorMessage>
    </validationRules>
</CustomObject>